fix(soporte): atender revision de JZ-10
